fix: product index is stretched on wide screen

--- a/src/components/pages/Cart/components/Products/components/Product/Product.css
+++ b/src/components/pages/Cart/components/Products/components/Product/Product.css
@@ -10,7 +10,6 @@
 }
 
 .product-index {
-  flex-basis: 3%;
   padding: 0.2rem 0.5rem;
   border: 1px solid var(--black);
   border-radius: 50%;
